# CSE167_Mandelbrot

./: CMakeLists.txt  README.md
shaders/: Mandelbrot.frag
src/: HelloSquare2.cpp  Mandelbrot.cpp  Shader.cpp
